<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".presentation.fragments.HomeFragment">

    <TextView
        android:id="@+id/HomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/levelsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeTitle">

        <TextView
            android:id="@+id/testLevelItem"
            style="@style/LevelOption"
            android:background="@drawable/level_item_bg_test"
            android:text="@string/level_test" />

        <TextView
            android:id="@+id/easyLevelItem"
            style="@style/LevelOption"
            android:background="@drawable/level_item_bg_easy"
            android:text="@string/level_easy" />

        <TextView
            android:id="@+id/normalLevelItem"
            style="@style/LevelOption"
            android:background="@drawable/level_item_bg_normal"
            android:text="@string/level_normal" />

        <TextView
            android:id="@+id/hardLevelItem"
            style="@style/LevelOption"
            android:background="@drawable/level_item_bg_hard"
            android:text="@string/level_hard" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>